--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -135,6 +135,22 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 
 [rewrite_remote]
 
+# ======= 个人收集 ======= #
+https://raw.githubusercontent.com/Yu9191/Rewrite/main/lgzj.js, tag=灵感足迹一次性, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Notability.conf, tag=Notability一次性, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/gjwj666/qx/main/ximalayabd.js, tag=喜马拉雅vip, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/WeiRen0/Scripts/main/FD.js, tag=樊登vip, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/gzrz.js, tag=格志vip, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/WeiRen0/Scripts/main/wxds.js, tag=微信读书vip, update-interval=86400, opt-parser=false, enabled=false
+https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/flomo.js, tag=浮墨vip, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/wzbz.js, tag=问真八字vip, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/cubox.js, tag=cuboxvip, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/89996462/Quantumult-X/main/gx/MGTV2.js, tag=芒果vip, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/cubox.js, tag=cuboxvip, update-interval=86400, opt-parser=false, enabled=true
+
+
+
+
 # ======= 会员解锁 ======= #
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=B站去广告+1080P高码率@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/UnlockVip/Spotify.conf, tag=Spotify音乐VIP[音质≤高]@app2smile, update-interval=86400, opt-parser=false, enabled=true
